# fracgen_gui_3d

./: .gitignore  Cargo.toml  README.md
media/: skybox.exr
src/: H  lib.rs  main.rs  old.rs  old2  old_abs  old_main  olddddddd
src/imagetypes/: bitmap.rs  mod.rs
src/rendering/: functions.rs  mod.rs  renderer.rs
